# ESP32S3-OTA

./: .gitignore  README.md
Modbus/radar_binding_platform_remote/: index.html  radar_platform_server.py
docs/firmware/: FLASHING.md  README.md
docs/introduction/: current_solution_version_notes.md  hardware_ota_strategy_v1.3.0.md  hardware_ota_strategy_v1.3.1.md  hardware_ota_strategy_v1.3.2.md  hardware_user_manual.md  ota_architecture_introduction.md
docs/notes/: ESP32S3_GPIO.md
docs/paper/: paper_esp32_ota.md  paper_iot_smart_city.md  review.md
docs/radar-platform/: Modbus格式.md  README.md  WORK_SUMMARY.md
firmware/: CMakeLists.txt  partitions_4m_ota.csv  sdkconfig
firmware/main/: CMakeLists.txt  app_config.h  cellular_ota_service.c  cellular_ota_service.h  device_service.c  device_service.h  main.c  ota_service.c  ota_service.h  radar_oled_app.c  radar_oled_app.h
ota-server/: ota_server.py
ota-server/deploy/: ota-server.service  ota_manager.conf
ota-server/firmware/: manifest.json
ota-server/html/: ota_manager.html
radar-platform/: radar_platform.py  requirements.txt
radar-platform/deploy/: radar-platform.service  radar_binding_platform.conf
radar-platform/html/: index.html
